--- a/src/main/webapp/baccarat.html
+++ b/src/main/webapp/baccarat.html
@@ -128,14 +128,14 @@
         <div class="right">
             <img id="bankercard1" class="bankercard1" src="image/2-heart.png" alt="">
             <img id="bankercard2" class="bankercard2" src="image/2-heart.png" alt="">
-            <img id="bankercard3" class="bankercard3" src="image/2-heart.png" alt="">
+            <img id="bankercard3" class="bankercard3" src="image/4-heart.png" alt="">
             <span class="banker">庄家</span>
         </div>
         <div class="start">
             <input class="btn-start" type="button" value="开始玩牌" onclick="playGame();" />
         </div>
     </div>
-    <script src="../../../../../Downloads/baccarat/jquery-1.8.3.min.js"></script>
+    <script src="js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript">
     var initUrl = 'service/baccarat/init',
         gameId;
